# PyRogueLite

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg
src/: config.py
src/char/: Player.py  Stats.py  character.py  stats.py
tests/char/: test_character.py  test_stats.py
