[metadata]
name = PyRogueLite
version = 0.1.0

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    attrs==22.2.0
    build==0.9.0
    click==8.1.3
    exceptiongroup==1.1.0
    iniconfig==2.0.0
    mypy-extensions==0.4.3
    numpy==1.24.1
    packaging==22.0
    pathspec==0.10.3
    pep517==0.13.0
    platformdirs==2.6.2
    pluggy==1.0.0
    pytest==7.2.0
    python-dotenv==0.21.0
    tomli==2.0.1
    typing-extensions==4.4.0

[options.entry_points]
console_scripts = 
    pyroguelite = main

[options.extras_require]
dev = 
    black==22.1.0

[options.packages.find]
where=src

[options.package_data]
example = config.json, *.txt
* = README.md